--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-tensorflow>=2.12
-keras>=2.12
-numpy
-pandas
-scikit-learn
+tensorflow==2.17.1
+# (quita la línea de keras==2.15.*; TF ya trae tf-keras)
+numpy<2
+pandas>=2.0,<2.2
+scikit-learn>=1.3,<1.6
 nltk
 matplotlib
 seaborn
-pennylane # optional for --hybrid
+pennylane==0.35.*
