--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,39 +2,41 @@
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
-
 [project]
 name = "hateval-trainer"
 version = "0.1.0"
-description = "HatEval ES text classification trainer (classic GRU + optional hybrid quantum layer)"
+description = "HatEval ES text classification trainer (BiGRU backbone + optional hybrid quantum head)"
 readme = "README.md"
 authors = [{ name = "Your Name" }]
 requires-python = ">=3.10"
+# Nota: evitamos fijar 'keras' explícito para no romper compatibilidad con la versión incluida en TF.
 dependencies = [
-"tensorflow>=2.12",
-"keras>=2.12",
-"numpy",
-"pandas",
-"scikit-learn",
-"nltk",
-"matplotlib",
-"seaborn",
-# Optional, only needed if --hybrid
-"pennylane; extra == 'quantum'",
+  "tensorflow>=2.9,<2.16",      # rango amplio y estable; ajusta si tu entorno requiere otro
+  "numpy>=1.23,<2.0",           # TF<2.16 no soporta numpy 2.x
+  "pandas>=1.4",
+  "scikit-learn>=1.1",
+  "nltk>=3.7",
+  "matplotlib>=3.6",
 ]
 
-
 [project.optional-dependencies]
-quantum = ["pennylane"]
-
+# Instala con: pip install ".[quantum]"
+quantum = [
+  "pennylane>=0.34"
+]
 
 [project.scripts]
 hateval-train = "hateval_trainer.cli:main"
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["hateval_trainer*"]
 
 [tool.black]
 line-length = 100
-
 
 [tool.ruff]
 line-length = 100
